@@ -16,3 +16,6 @@ do uzupełnienia
 
 2020-11-23
 1. UNIT_TESTS ProductCategory: pre_save_product_category signal called methods order
+
+2020-11-24
+1. UNIT_TESTS ProductCategory: update_category_fields (patchowana metoda make_root() - do dokonczenia)
